# Omni

./: .env.example  .gitignore  README.md  mcp.json  pyproject.toml
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  agent_a_loans.md  agent_a_loans.py  agent_b_risk.md  agent_b_risk.py  agent_c_treasury.md  agent_c_treasury.py  agent_runner.py  compliance_agent.md  llm_client.py  negotiator_agent.md  policy_book.md  underwriter_agent.md
app/integrations/: __init__.py  gmail.py  mock_services.py  notion_audit.py  notion_mcp.py  notion_setup.py  notion_updates.py  push_policy.py  slack.py
app/models/: __init__.py  policy.py  proposal.py  transaction.py
app/orchestrator/: __init__.py  formatting.py  history.py  judgment.py  negotiation.py  state_machine.py  validator.py  verdict.py
app/routes/: applications.py  health.py  orchestration.py  simulate.py  webhooks.py
app/scripts/: fixtures.json  persistence.py  simulate_engine.py  simulate_trigger.py
app/services/: audit_feed.py  downstream.py  notion_poller.py  transaction_store.py
app/static/: index.html  script.js  style.css
brain/76d1e737-bbec-48b5-8785-6ff891c363df/: implementation_plan.md
tests/: test_agent_a.py  test_agent_b.py  test_agent_c.py  test_dashboard_api.py  test_e2e_scenarios.py  test_formatting.py  test_health.py  test_history.py  test_integration_negotiation.py  test_integrations.py  test_judgment.py  test_live_smoke.py  test_llm_key_pool.py  test_models.py  test_simulate_trigger.py  test_validator.py  test_validator_human_review.py  test_verdict.py  test_webhooks.py
